--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,14 @@ jobs:
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
+      
+      - name: Create .env file from GitHub Secrets
+        run: |
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
+          echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}" >> .env
 
       - name: Build project
         run: npm run build
-        env:
-          VITE_API_URL: ${{ secrets.VITE_API_URL }}
-          VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
