--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,6 @@ jobs:
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
-
-      - name: Print env variables
-        run: |
-          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}"
-          echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}"
       
       - name: Create .env file from GitHub Secrets
         run: |
@@ -32,6 +27,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Copy index.html to 404.html for SPA routing
+        run: cp dist/index.html dist/404.html
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
